--- a/main/templates/dashboard/overview.html
+++ b/main/templates/dashboard/overview.html
@@ -1,4 +1,4 @@
-{% extends "dashboard/layout.html" %}
+{% extends "dashboard/include/layout.html" %}
 
 {% load static %}
 
@@ -13,5 +13,24 @@
 {% endblock %}
 
 {% block content %}
-<p>This is Dashboard page</p>
+  {% if users %}
+    <h5 class="mb-2">Registrations <span class="badge badge-info right">{{ users|length }}</span></h5>
+    {% for user in users %}
+      {% if forloop.first %}<div class="row">{% endif %}
+      <div class="col-lg-4 col-md-6 col-sm-12">
+        <div class="info-box">
+          <a href="#" class="info-box-icon bg-info"><i class="far fa-user"></i></a>
+
+          <div class="info-box-content">
+            <span class="info-box-text">{{ user.get_full_name|default:"No Name" }}</span>
+            <span class="info-box-number">{{ user.email }}</span>
+            <span>{{ user.date_joined|timesince }}</span>
+          </div>
+        </div>
+      </div>
+      {% if forloop.counter|divisibleby:3 %}</div><div class="row">{% endif %}
+      {% if forloop.last %}</div>{% endif %}
+
+    {% endfor %}
+  {% endif %}
 {% endblock content %}
