Updated the affiliates page

--- a/main/templates/dashboard/affiliates.html
+++ b/main/templates/dashboard/affiliates.html
@@ -5,7 +5,7 @@
 {% block title %}Dashboard{% endblock title %}
 
 {% block sidebar %}
-{% include "dashboard/include/sidebar.html" with active='Affiliates' %}
+  {% include "dashboard/include/sidebar.html" with active='Affiliates' %}
 {% endblock %}
 
 {% block content-header %}
@@ -13,5 +13,82 @@
 {% endblock %}
 
 {% block content %}
-<p>This is Affiliates page</p>
+  <div class="text-right">
+    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#modal-new-user">Create New User</button>
+  </div>
+  <br>
+  <div class="modal fade" id="modal-new-user">
+    <div class="modal-dialog modal-lg">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h4 class="modal-title">New User</h4>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <p>One fine body&hellip;</p>
+        </div>
+        <div class="modal-footer justify-content-between">
+          <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+          <button type="button" class="btn btn-primary">Create</button>
+        </div>
+      </div>
+      <!-- /.modal-content -->
+    </div>
+    <!-- /.modal-dialog -->
+  </div>
+  <!-- /.modal -->
+
+  {% if users %}
+    <div class="card">
+      <!-- /.card-header -->
+      <div class="card-body">
+        <div class="dataTables_wrapper dt-bootstrap4">
+          <div class="row">
+            <div class="col-sm-12">
+              <table id="users-table" class="table table-bordered table-hover">
+                <thead>
+                <tr>
+                  <th>Name</th>
+                  <th>Email</th>
+                  <th>Last Active</th>
+                  <th>Action</th>
+                </tr>
+                </thead>
+                <tbody>
+                {% for user in users %}
+                  <tr>
+                    <td>{{ user.get_full_name|default:"No Name" }}</td>
+                    <td>{{ user.email }}</td>
+                    <td>{{ user.date_joined|timesince }}</td>
+                    <td><button type="button" class="btn btn-block btn-danger">Delete</button></td>
+                  </tr>
+                {% endfor %}
+                </tbody>
+              </table>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- /.card-body -->
+    </div>
+  {% endif %}
 {% endblock content %}
+
+{% block sub_extra_script %}
+  <script src="{% static 'plugins/datatables/jquery.dataTables.js' %}"></script>
+  <script src="{% static 'plugins/datatables-bs4/js/dataTables.bootstrap4.js' %}"></script>
+  <script>
+    $(function () {
+      $('#users-table').DataTable({
+        "paging": true,
+        "lengthChange": false,
+        "searching": false,
+        "ordering": true,
+        "info": true,
+        "autoWidth": false,
+      });
+    });
+  </script>
+{% endblock %}
