--- a/main/templates/dashboard/affiliates.html
+++ b/main/templates/dashboard/affiliates.html
@@ -4,6 +4,10 @@
 
 {% block title %}Dashboard{% endblock title %}
 
+{% block extrastyle %}
+  <link href="{% static 'plugins/toastr/toastr.min.css' %}" rel="stylesheet" type="text/css" />
+{% endblock %}
+
 {% block sidebar %}
   {% include "dashboard/include/sidebar.html" with active='Affiliates' %}
 {% endblock %}
@@ -20,19 +24,36 @@
   <div class="modal fade" id="modal-new-user">
     <div class="modal-dialog modal-lg">
       <div class="modal-content">
-        <div class="modal-header">
-          <h4 class="modal-title">New User</h4>
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-          </button>
-        </div>
-        <div class="modal-body">
-          <p>One fine body&hellip;</p>
-        </div>
-        <div class="modal-footer justify-content-between">
-          <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-          <button type="button" class="btn btn-primary">Create</button>
-        </div>
+        <form method="post" role="form">{% csrf_token %}
+          <div class="modal-header">
+            <h4 class="modal-title">New User</h4>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <div class="form-group">
+              <label for="email">Email address</label>
+              <input type="email" class="form-control" name="email" id="email" placeholder="Enter email">
+            </div>
+            <div class="form-group">
+              <label for="password">Password</label>
+              <input type="password" class="form-control" name="password" id="password" placeholder="Password">
+            </div>
+            <div class="form-group">
+              <label for="first_name">First Name</label>
+              <input type="text" class="form-control" name="first_name" id="first_name" placeholder="First Name">
+            </div>
+            <div class="form-group">
+              <label for="last_name">Last Name</label>
+              <input type="text" class="form-control" name="last_name" id="last_name" placeholder="Last Name">
+            </div>
+          </div>
+          <div class="modal-footer justify-content-between">
+            <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+            <button type="submit" class="btn btn-primary">Create</button>
+          </div>
+        </form>
       </div>
       <!-- /.modal-content -->
     </div>
@@ -62,7 +83,8 @@
                     <td>{{ user.get_full_name|default:"No Name" }}</td>
                     <td>{{ user.email }}</td>
                     <td>{{ user.date_joined|timesince }}</td>
-                    <td><button type="button" class="btn btn-block btn-danger">Delete</button></td>
+                    <td><a href="{% url 'profiles:user-delete' user.id %}" onclick="return confirm('Are you sure?');"
+                           class="btn btn-block btn-danger">Delete</a></td>
                   </tr>
                 {% endfor %}
                 </tbody>
@@ -79,6 +101,7 @@
 {% block sub_extra_script %}
   <script src="{% static 'plugins/datatables/jquery.dataTables.js' %}"></script>
   <script src="{% static 'plugins/datatables-bs4/js/dataTables.bootstrap4.js' %}"></script>
+  <script src="{% static 'plugins/toastr/toastr.min.js' %}"></script>
   <script>
     $(function () {
       $('#users-table').DataTable({
@@ -91,4 +114,16 @@
       });
     });
   </script>
+
+  {% for message in messages %}
+    {% if message.tags == "info" %}
+        <script> toastr.info('{{message}}')</script>
+    {% elif message.tags == "error" %}
+        <script> toastr.error('{{message}}')</script>
+    {% elif message.tags == "warning" %}
+        <script> toastr.warning('{{message}}')</script>
+    {% elif message.tags == "success" %}
+        <script> toastr.success('{{message}}')</script>
+    {% endif %}
+  {% endfor %}
 {% endblock %}
