--- a/main/templates/dashboard/offers.html
+++ b/main/templates/dashboard/offers.html
@@ -4,6 +4,10 @@
 
 {% block title %}Dashboard{% endblock title %}
 
+{% block extrastyle %}
+  <link href="{% static 'plugins/toastr/toastr.min.css' %}" rel="stylesheet" type="text/css" />
+{% endblock %}
+
 {% block sidebar %}
 {% include "dashboard/include/sidebar.html" with active='Offers' %}
 {% endblock %}
@@ -13,5 +17,96 @@
 {% endblock %}
 
 {% block content %}
-<p>This is Offers page</p>
+  <div class="text-right">
+    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#modal-new-link">Create New Link</button>
+  </div>
+  <br>
+  <div class="modal fade" id="modal-new-link">
+    <div class="modal-dialog modal-lg">
+      <div class="modal-content">
+        <form method="post" role="form">{% csrf_token %}
+          <div class="modal-header">
+            <h4 class="modal-title">New Smart Link</h4>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            {{ form.as_p }}
+          </div>
+          <div class="modal-footer justify-content-between">
+            <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+            <button type="submit" class="btn btn-primary">Create</button>
+          </div>
+        </form>
+      </div>
+      <!-- /.modal-content -->
+    </div>
+    <!-- /.modal-dialog -->
+  </div>
+  <!-- /.modal -->
+
+  {% if smart_links %}
+    <div class="card">
+      <!-- /.card-header -->
+      <div class="card-body">
+        <div class="dataTables_wrapper dt-bootstrap4">
+          <div class="row">
+            <div class="col-sm-12">
+              <table id="users-table" class="table table-bordered table-hover">
+                <thead>
+                <tr>
+                  <th>User</th>
+                  <th>Smart Link</th>
+                  <th>Action</th>
+                </tr>
+                </thead>
+                <tbody>
+                {% for smart_link in smart_links %}
+                  <tr>
+                    <td>{{ smart_link.customer.email }}</td>
+                    <td>{{ smart_link.smart_link }}</td>
+                    <td><a href="{% url 'dashboard:link-delete' smart_link.id %}" onclick="return confirm('Are you sure?');"
+                           class="btn btn-block btn-danger">Delete</a></td>
+                  </tr>
+                {% endfor %}
+                </tbody>
+              </table>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- /.card-body -->
+    </div>
+  {% endif %}
 {% endblock content %}
+
+{% block sub_extra_script %}
+  <script src="{% static 'plugins/datatables/jquery.dataTables.js' %}"></script>
+  <script src="{% static 'plugins/datatables-bs4/js/dataTables.bootstrap4.js' %}"></script>
+  <script src="{% static 'plugins/toastr/toastr.min.js' %}"></script>
+  <script>
+    $(function () {
+      $('#smart-links-table').DataTable({
+        "paging": true,
+        "lengthChange": false,
+        "searching": false,
+        "ordering": true,
+        "info": true,
+        "autoWidth": false,
+      });
+    });
+  </script>
+
+  {% for message in messages %}
+    {% if message.tags == "info" %}
+        <script> toastr.info('{{message}}')</script>
+    {% elif message.tags == "error" %}
+        <script> toastr.error('{{message}}')</script>
+    {% elif message.tags == "warning" %}
+        <script> toastr.warning('{{message}}')</script>
+    {% elif message.tags == "success" %}
+        <script> toastr.success('{{message}}')</script>
+    {% endif %}
+  {% endfor %}
+{% endblock %}
