--- a/main/templates/dashboard/include/sidebar.html
+++ b/main/templates/dashboard/include/sidebar.html
@@ -25,33 +25,33 @@
         </a>
       </li>
 
-      <li class="nav-item">
-        <a href="{% url 'dashboard:finances' %}" class="nav-link{% if active == 'Finances' %} active{% endif %}">
-          <i class="nav-icon fas fa-dollar-sign"></i>
-          <p>Finances</p>
-        </a>
-      </li>
-
-      <li class="nav-item">
-        <a href="{% url 'dashboard:mail-room' %}" class="nav-link{% if active == 'Mail room' %} active{% endif %}">
-          <i class="nav-icon fas fa-envelope"></i>
-          <p>Mail room</p>
-        </a>
-      </li>
-
-      <li class="nav-item">
-        <a href="{% url 'dashboard:tools' %}" class="nav-link{% if active == 'Tools' %} active{% endif %}">
-          <i class="nav-icon fas fa-wrench"></i>
-          <p>Tools</p>
-        </a>
-      </li>
-
-      <li class="nav-item">
-        <a href="{% url 'dashboard:administration' %}" class="nav-link{% if active == 'Administration' %} active{% endif %}">
-          <i class="nav-icon fas fa-toolbox"></i>
-          <p>Administration</p>
-        </a>
-      </li>
+{#      <li class="nav-item">#}
+{#        <a href="{% url 'dashboard:finances' %}" class="nav-link{% if active == 'Finances' %} active{% endif %}">#}
+{#          <i class="nav-icon fas fa-dollar-sign"></i>#}
+{#          <p>Finances</p>#}
+{#        </a>#}
+{#      </li>#}
+{##}
+{#      <li class="nav-item">#}
+{#        <a href="{% url 'dashboard:mail-room' %}" class="nav-link{% if active == 'Mail room' %} active{% endif %}">#}
+{#          <i class="nav-icon fas fa-envelope"></i>#}
+{#          <p>Mail room</p>#}
+{#        </a>#}
+{#      </li>#}
+{##}
+{#      <li class="nav-item">#}
+{#        <a href="{% url 'dashboard:tools' %}" class="nav-link{% if active == 'Tools' %} active{% endif %}">#}
+{#          <i class="nav-icon fas fa-wrench"></i>#}
+{#          <p>Tools</p>#}
+{#        </a>#}
+{#      </li>#}
+{##}
+{#      <li class="nav-item">#}
+{#        <a href="{% url 'dashboard:administration' %}" class="nav-link{% if active == 'Administration' %} active{% endif %}">#}
+{#          <i class="nav-icon fas fa-toolbox"></i>#}
+{#          <p>Administration</p>#}
+{#        </a>#}
+{#      </li>#}
 
     </ul>
   </nav>
