Updated home page

--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -16,6 +16,7 @@
   {% block extrastyle %}{% endblock %}
 
   <link href="{% static 'plugins/adminlte/css/adminlte.min.css' %}" rel="stylesheet" type="text/css" />
+  <link href="{% static 'css/styles.css' %}" rel="stylesheet" type="text/css" />
 
   {% block extrahead %}{% endblock %}
 
