--- a/main/templates/profiles/home.html
+++ b/main/templates/profiles/home.html
@@ -5,5 +5,27 @@
 {% block title %}Affiliate Marketing Home{% endblock title %}
 
 {% block content %}
-<p>This is Home page</p>
+  <div class="row section-hero">
+    <div class="text-center section-titles-wrapper">
+      <h1 class="big-title">My Affiliate</h1>
+      <h3 class="small-title">Our smartlink boost conversion rates and profits while doing all the work hard for
+        you.Join over 10 000 other affiliates and monetize your traffic!</h3>
+      <a href="#" class="btn-join">Join</a>
+    </div>
+  </div>
+  <div class="row section-banner">
+    <div class="col-sm-6 col-12 banner-image"></div>
+    <div class="col-sm-6 col-12 text-center banner-texts">
+      <div class="banner-title-wrapper">
+        <h4 class="small-title">GET IN TOUCH WITH ONE OF OUR MANAGERS AND GET ALL THE ANSWERS YOU MAY HAVE</h4>
+        <a href="#" class="btn-join">Join</a>
+      </div>
+    </div>
+  </div>
+  <div class="row section-parallax">
+    <div class="text-center section-titles-wrapper">
+      <h4 class="small-title">GET IN TOUCH WITH ONE OF OUR MANAGERS AND GET ALL THE ANSWERS YOU MAY HAVE</h4>
+      <a href="#" class="btn-join">Contact Us</a>
+    </div>
+  </div>
 {% endblock content %}
