--- a/main/templates/profiles/login.html
+++ b/main/templates/profiles/login.html
@@ -5,7 +5,7 @@
 {% block title %}Login{% endblock title %}
 
 {% block content %}
-<div class="register-page">
+<div class="register-page section-hero">
   <div class="register-box">
     <div class="card">
       <div class="card-body register-card-body">
