Minor fixes on the templates

--- a/templates/dashboard/include/layout.html
+++ b/templates/dashboard/include/layout.html
@@ -92,7 +92,7 @@
       <div class="float-right d-none d-sm-inline">
         <b>Version</b> 1.0.0
       </div>
-      <strong>Copyright &copy; 2015-2019 <a href="/">Affiliate Marketing</a>.</strong>
+      <strong>Copyright &copy; 2015-2019 <a href="/">My Affiliate</a>.</strong>
       All rights reserved.
     </footer>
     {% block extrafooter %}{% endblock %}
