Added balance to user

--- a/templates/dashboard/include/layout.html
+++ b/templates/dashboard/include/layout.html
@@ -32,6 +32,9 @@
       </ul>
 
       <ul class="navbar-nav ml-auto">
+        <li class="nav-item">
+          <span class="nav-link">Balance: <strong>${{ user.get_balance|default:'0'|floatformat:2 }}</strong></span>
+        </li>
         <li class="nav-item dropdown">
           <a class="nav-link" data-toggle="dropdown" href="#">
             <i class="far fa-user"></i>
