Minor fixes on style and resource

--- a/templates/dashboard/user-detail.html
+++ b/templates/dashboard/user-detail.html
@@ -22,7 +22,7 @@
           <h5 class="widget-user-desc">{{ customer.email }}</h5>
         </div>
         <div class="widget-user-image">
-          <img class="img-circle elevation-2" src="{% static 'img/user1-128x128.jpg' %}" alt="User Avatar">
+          <img class="img-circle elevation-2" src="{% static 'img/user-pic-default.png' %}" alt="User Avatar">
         </div>
         <div class="card-footer">
           <div class="row">
