--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,11 +1,14 @@
 .section-hero {
   position: relative;
   background-image: url("../img/image01.jpg");
-  height: 875px;
+  height: calc(100vh - 50px);
 
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+}
+.register-page.section-hero {
+  height: calc(100vh - 117px);
 }
 .section-titles-wrapper,
 .section-banner .banner-texts .banner-title-wrapper {
@@ -15,25 +18,30 @@
   transform: translate(-50%, -50%);
 }
 .big-title {
-  font-size: 3.7em;
+  font-size: calc(32px + 45 * ((100vw - 320px) / 1280));
+  letter-spacing: calc(2px + 3 * ((100vw - 320px) / 1280));
 }
 h3.small-title {
-  font-size: 2em;
+  font-size: calc(18px + 22 * ((100vw - 320px) / 1280));
 }
 h4.small-title {
-  font-size: 1.7em;
+  font-size: calc(16px + 20 * ((100vw - 320px) / 1280));
 }
 .section-banner .banner-image {
-  background-image: url("../img/image03.jpg");
-  min-height: 670px;
+  background-image: url("../img/image02.jpg");
+  min-height: 75vh;
+  background-position: center right;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 .section-banner .banner-texts {
   position: relative;
+  min-height: 35vh;
 }
 .section-parallax {
   position: relative;
-  background-image: url("../img/image02.jpg");
-  height: 875px;
+  background-image: url("../img/image03.jpg");
+  height: calc(100vh - 50px);
 
   background-attachment: fixed;
   background-position: center;
@@ -44,7 +52,7 @@ h4.small-title {
 .btn-join {
   display: inline-block;
   margin-top: 20px;
-  font-size: 1.7em;
+  font-size: calc(16px + 10 * ((100vw - 320px) / 1280));
   color: black;
   border: 1px solid;
   border-radius: 5px;
