--- a/templates/base.html
+++ b/templates/base.html
@@ -29,7 +29,7 @@
       <div class="container">
         <a href="/" class="navbar-brand">
           <img src="{% static 'img/logo.png' %}" alt="Logo" class="brand-image img-circle elevation-3" style="opacity: .8">
-          <span class="brand-text font-weight-light">My Affiliate</span>
+          <span class="brand-text font-weight-light">MummyMonetize</span>
         </a>
 
         <div class="collapse navbar-collapse order-3" id="navbarCollapse">
@@ -51,7 +51,7 @@
       <div class="float-right d-none d-sm-inline">
         <b>Version</b> 1.0.0
       </div>
-      <strong>Copyright &copy; 2015-2019 <a href="/">My Affiliate</a>.</strong>
+      <strong>Copyright &copy; 2015-2019 <a href="/">MummyMonetize</a>.</strong>
       All rights reserved.
     </footer>
     {% block extrafooter %}{% endblock %}
