--- a/templates/dashboard/include/layout.html
+++ b/templates/dashboard/include/layout.html
@@ -45,7 +45,7 @@
               <a href="#" class="dropdown-item">
                 <!-- Message Start -->
                 <div class="media">
-                  <img src="{% static 'img/user1-128x128.jpg' %}" alt="User Avatar" class="img-size-50 mr-3 img-circle">
+                  <img src="{% static 'img/user-pic-default.png' %}" alt="User Avatar" class="img-size-50 mr-3 img-circle">
                   <div class="media-body">
                     <h3 class="dropdown-item-title">{{ user.get_full_name|default:"No Name" }}</h3>
                     <p class="text-sm">{{ user.email }}</p>
@@ -67,7 +67,7 @@
       <a href="#" class="brand-link">
         <img src="{% static 'img/logo.png' %}" alt="Logo" class="brand-image img-circle elevation-3"
              style="opacity: .8">
-        <span class="brand-text font-weight-light">My Affiliate</span>
+        <span class="brand-text font-weight-light">MummyMonetize</span>
       </a>
 
       <!-- Sidebar -->
@@ -95,7 +95,7 @@
       <div class="float-right d-none d-sm-inline">
         <b>Version</b> 1.0.0
       </div>
-      <strong>Copyright &copy; 2015-2019 <a href="/">My Affiliate</a>.</strong>
+      <strong>Copyright &copy; 2015-2019 <a href="/">MummyMonetize</a>.</strong>
       All rights reserved.
     </footer>
     {% block extrafooter %}{% endblock %}
