--- a/templates/profiles/home.html
+++ b/templates/profiles/home.html
@@ -7,15 +7,15 @@
 {% block content %}
   <div class="row section-hero">
     <div class="text-center section-titles-wrapper">
-      <h1 class="big-title">My Affiliate</h1>
+      <h1 class="big-title">MummyMonetize</h1>
       <h3 class="small-title">Our smartlink boost conversion rates and profits while doing all the work hard for
         you.Join over 10 000 other affiliates and monetize your traffic!</h3>
       <a href="#" class="btn-join">Join</a>
     </div>
   </div>
   <div class="row section-banner">
-    <div class="col-sm-6 col-12 banner-image"></div>
-    <div class="col-sm-6 col-12 text-center banner-texts">
+    <div class="col-md-6 col-sm-12 banner-image"></div>
+    <div class="col-md-6 col-sm-12 text-center banner-texts">
       <div class="banner-title-wrapper">
         <h4 class="small-title">GET IN TOUCH WITH ONE OF OUR MANAGERS AND GET ALL THE ANSWERS YOU MAY HAVE</h4>
         <a href="#" class="btn-join">Join</a>
