--- a/templates/profiles/home.html
+++ b/templates/profiles/home.html
@@ -2,7 +2,7 @@
 
 {% load static %}
 
-{% block title %}Affiliate Marketing Home{% endblock title %}
+{% block title %}Home{% endblock title %}
 
 {% block content %}
   <div class="row section-hero">
