--- a/templates/dashboard/include/layout.html
+++ b/templates/dashboard/include/layout.html
@@ -3,8 +3,8 @@
 <html>
 <head>
   <meta charset="utf-8"/>
-  <title>{% block title %}{% endblock %}</title>
-  <meta name="description" content="Affiliate Marketing">
+  <title>MummyMonetize | Dashboard</title>
+  <meta name="description" content="MummyMonetize">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, shrink-to-fit=no">
 
   <link rel="shortcut icon" type="image/x-icon" href="{% static 'img/logo.png' %}" />
